# youtinerary-api

./: .gitignore  Cargo.toml  README.md
.github/workflows/: shuttle.yaml
migrations/: 20231207025014_Initial_Create.down.sql  20231207025014_Initial_Create.up.sql
src/: auth.rs  database.rs  db.rs  features.rs  main.rs  models.rs
src/features/: create_flight.rs  create_itinerary.rs  create_user.rs  get_itineraries.rs  get_itinerary.rs
src/routes/: itineraries.rs
youtinerary-api/: Cargo.toml
youtinerary-api/.sqlx/: query-755dc47b8338b228d2d233486370d690757d0cae63515ee5c1f317f447bab6d6.json
youtinerary-api/migrations/: 20231207025014_Initial_Create.down.sql  20231207025014_Initial_Create.up.sql
youtinerary-api/src/: configuration.rs  main.rs  middlewares.rs  models.rs  routes.rs
youtinerary-api/src/features/: create_flight.rs  create_itinerary.rs  create_user.rs  get_itineraries.rs  get_itinerary.rs
youtinerary-auth/: Cargo.toml
youtinerary-auth/src/: lib.rs
